dynamically gets data from json server

--- a/src/app/spending-list/spending-list.component.html
+++ b/src/app/spending-list/spending-list.component.html
@@ -12,7 +12,7 @@
     <tbody>
 
       <tr *ngFor="let expendentiure of spendings">
-        <td>{{expendentiure.name}}</td>
+        <td>{{expendentiure.type}}</td>
         <td>{{expendentiure.amount}}</td>
       </tr>
       <tr class="table-dark">
