--- a/src/app/spending-list/spending-list.component.html
+++ b/src/app/spending-list/spending-list.component.html
@@ -17,24 +17,14 @@
         </td>
       </tr>
 
-      <tr>
-        <div *ngIf="addsItem">
-          <form [formGroup]="form" (ngSubmit)="onSubmit()">
-            <td>
-            <label for="type"></label>
-            <input class="form-control" id="type" type="text" placeholder="Type" formControlName="type">
-          </td>
-          <td>
-            <label for="amount"></label>
-            <input class="form-control" id="amount" type="text" placeholder="Amount" formControlName="amount">
-          </td>
-          <td>
-            <button type="submit" class="btn btn-outline-success">submit</button>
-          </td>
-          </form>
-        </div>
+      <div *ngIf="addsItem">
+        <tr>
+          <app-spending-formular></app-spending-formular>
+  
+        </tr>
 
-      </tr>
+      </div>
+
 
       <tr class="table-dark">
         <td>Sum</td>
